--- a/app/src/main/res/layout/activity_anime_detail.xml
+++ b/app/src/main/res/layout/activity_anime_detail.xml
@@ -9,7 +9,7 @@
     <WebView
         android:id="@+id/video_container"
         android:layout_width="match_parent"
-        android:layout_height="230dp"
+        android:layout_height="220dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -108,13 +108,16 @@
     <TextView
         android:id="@+id/tv_synopsis"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rv_genre"
+        app:layout_constraintVertical_bias="0.513"
         tools:text="@tools:sample/lorem/random" />
 
     <CheckBox
